complete validate
