# models/UserBasic.go
@@ -2,16 +2,23 @@ package models
 
 import (
 	"ginchat/utils"
+	// "github.com/asaskevich/govalidator"
 
 	"gorm.io/gorm"
 )
 
+// All fields are required to at least have one validation defined
+// using valid:"-" or valid:"email,optional"
+// func init() {
+//   valid.SetFieldsRequiredByDefault(true)
+// }
+
 type UserBasic struct {
 	gorm.Model
-	Name          string
-	Password      string
-	Phone         string
-	Email         string
+	Name          string `valid:"-"`
+	Password      string `valid:"-"`
+	Phone         string `valid:"numeric"`
+	Email         string `valid:"required,email"`
 	Identity      int 
 	ClientID      string
 	ClientPort    int
@@ -45,6 +52,29 @@ func CreateUser(user *UserBasic) error {
 
 func DeleteUser(user *UserBasic) error {
 	result := utils.DB.Where("name = ?",user.Name).Delete(&UserBasic{}) 
+	if result.Error != nil {
+		return result.Error
+	}
+	return nil
+}
+
+func UpdateUser(user *UserBasic) error {
+	result := utils.DB.Model(&UserBasic{})
+	result = result.Where("id = ?",user.ID)
+	result = result.Updates(UserBasic{
+		Name:          user.Name,
+		Password:      user.Password,
+		Phone:         user.Phone,
+		Email:         user.Email,
+		// Identity:      user.Identity,
+		// ClientID:      user.ClientID,
+		// ClientPort:    user.ClientPort,
+		// LoginTime:     user.LoginTime,
+		// HeartbeatTime: user.HeartbeatTime,
+		// LogoutTime:    user.LogoutTime,
+		// IsLogout:      user.IsLogout,
+		// DeviceInfo:    user.DeviceInfo,
+	})
 	if result.Error != nil {
 		return result.Error
 	}
